--- a/site/index.html
+++ b/site/index.html
@@ -1,11 +1,30 @@
 <!DOCTYPE html>
 <html>
 <head>
+	<link rel="stylesheet" href="bootstrap-5.3.0-dist/bootstrap-5.3.0-dist/css/bootstrap.min.css">
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>Hello Coursera!</title>
 </head>
-<body>
+<body style = "font-family: Arial, Helvetica, sans-serif;">
 <h1>Hello Coursera</h1>
+<div class="container-fluid">
+	<div class="row">
+		<div class="col-md-4 col-sm-6"
+		style="border:3px solid blueviolet;">
+		Col 1</div>
+		<div class="col-md-4 col-sm-6"
+		style="border:3px solid blueviolet;">
+		Col 2</div>
+		<div class="col-md-4 col-sm-6"
+		style="border:3px solid blueviolet;">
+		Col 3</div>
+		<div class="col-md-4 col-sm-6"
+		style="border:3px solid blueviolet;">
+		Col 4</div>
+	</div>
+</div>
+<p style = "color: blueviolet; font-size: 24px;">Blue Violet Paragraph</p>
+<script src="bootstrap-5.3.0-dist/bootstrap-5.3.0-dist/js/bootstrap.min.js"></script>
 </body>
 </html>
